--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAri Unnikrishnan - Resume</title>
+    <title>Hari Unnikrishnan - Resume</title>
     <style>
         :root {
             --primary-color: #2c3e50;
@@ -188,10 +188,6 @@
             <h1>HARI UNNIKRISHNAN</h1>
             <div class="subtitle">Engineering Executive & Computer Vision Expert (Ph.D.)</div>
             <div class="contact-info">
-                <span>(859) 797-0873</span>
-                <span>|</span>
-                <a href="mailto:harikrish.u@gmail.com">harikrish.u@gmail.com</a>
-                <span>|</span>
                 <a href="https://linkedin.com/in/harikrishnanengr" target="_blank">LinkedIn</a>
                 <span>|</span>
                 <a href="https://scholar.google.com/citations?user=0FxNtQUAAAAJ&hl=en" target="_blank">Google Scholar Profile</a>
